[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 100, 100 )

[node name="MenuButtonFile" type="MenuButton" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 45.0
margin_bottom = 30.0
text = "File"
switch_on_hover = true

[node name="MenuButtonHelp" type="MenuButton" parent="."]
margin_left = 50.0
margin_top = 10.0
margin_right = 92.0
margin_bottom = 30.0
text = "Help"
switch_on_hover = true

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 138.0
margin_top = 116.0
margin_right = 880.0
margin_bottom = 480.0
window_title = "Save As File"
access = 2
current_dir = "/home/rainbyte/Local/Proyectos/learn-godot/source_git/MakingPrograms_TextEditor"
current_path = "/home/rainbyte/Local/Proyectos/learn-godot/source_git/MakingPrograms_TextEditor/"

[node name="OpenDialog" type="FileDialog" parent="."]
margin_left = 138.0
margin_top = 116.0
margin_right = 880.0
margin_bottom = 480.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/home/rainbyte/Local/Proyectos/learn-godot/source_git/MakingPrograms_TextEditor"
current_path = "/home/rainbyte/Local/Proyectos/learn-godot/source_git/MakingPrograms_TextEditor/"

[node name="AboutDialog" type="WindowDialog" parent="."]
margin_left = 260.0
margin_top = 220.0
margin_right = 690.0
margin_bottom = 444.0

[node name="Label" type="Label" parent="AboutDialog"]
margin_left = 109.0
margin_top = 38.0
margin_right = 327.0
margin_bottom = 82.0
text = "Hello and welcome to out little text editor"
autowrap = true
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_OpenDialog_file_selected"]
